Add continuation critical sections